# markov-random-field

./: .clang-format  .clangd  .gitignore  .gitmodules  .luarc.json  CMakeLists.txt  Doxyfile  README.md  main.cpp  xmake.lua
data_visalization/: pyproject.toml  simulations.ipynb
model_validation/: .gitignore  README.md  acol_input_simulated.txt  acol_lotus.tsv  acol_simulated.txt  acol_simulated_Y.txt  acol_simulated_Y_trace.txt  acol_simulated_Z_molecules.txt  acol_simulated_Z_molecules_trace.txt  acol_simulated_Z_species.txt  acol_simulated_Z_species_trace.txt  acol_simulated_molecules_branch_length_grid.txt  cli.py  generate_data.py  linear_assigment.py  model_validation.ipynb  molecules.txt  params.py  pyproject.toml  run.sh  simulate.parameters  single_clique.ipynb  transition_density.py  tree.py  visualize.py
model_validation/balanced_tree/: acol_input_simulated.txt  acol_lotus.tsv  acol_molecules_simulated.txt  acol_simulated.txt  acol_simulated_Y.txt  acol_simulated_Z_molecules.txt  acol_simulated_Z_species.txt  acol_simulated_joint_density.txt  acol_simulated_lotus.tsv  acol_simulated_molecules_branch_length_grid.txt  acol_simulated_species_branch_length_grid.txt  acol_species_simulated.txt  check_convergence.ipynb  infer.sh  model_validation.ipynb  molecules.txt  pyproject.toml  run.sh  simulate.parameters  simulate.sh  species.txt
model_validation/balanced_tree/branch_given_but_not_fixed/: acol.parameters  acol_Y_posterior.txt  acol_config.txt  acol_meanVar.txt  acol_molecules_posteriorMode.txt  acol_molecules_statePosteriors.txt  acol_species_posteriorMode.txt  acol_species_statePosteriors.txt  branch_len_state_posterior.ipynb  check_Y_results.ipynb  check_trace.ipynb  mu_posterior.ipynb
model_validation/convergence_bigger_tree/: acol_input_simulated.txt  acol_lotus.tsv  acol_molecules_simulated.txt  acol_simulated.txt  acol_simulated_Y.txt  acol_simulated_Z_molecules.txt  acol_simulated_Z_species.txt  acol_simulated_joint_density.txt  acol_simulated_lotus.tsv  acol_species_simulated.txt  check_convergence.ipynb  infer.sh  pyproject.toml  run.sh  simulate.parameters  simulate.sh
model_validation/convergence_bigger_tree/branch_given_but_not_fixed/: acol.parameters  acol_Y_posterior.txt  acol_config.txt  acol_meanVar.txt  acol_molecules_posteriorMode.txt  acol_molecules_statePosteriors.txt  acol_species_posteriorMode.txt  acol_species_statePosteriors.txt  check_Y_results.ipynb  mu_posterior.ipynb
model_validation/convergence_bigger_tree/test_out/: acol.parameters  acol_Y_posterior.txt  acol_config.txt  acol_meanVar.txt  acol_molecules_posteriorMode.txt  acol_molecules_statePosteriors.txt  acol_species_posteriorMode.txt  acol_species_statePosteriors.txt  branch_len_state_posterior.ipynb  check_Y_and_Z_results.ipynb  mu_posterior.ipynb
model_validation/single_root/: acol_input_simulated.txt  acol_lotus.tsv  acol_lotus_config.txt  acol_lotus_meanVar.txt  acol_lotus_posteriorMode.txt  acol_lotus_species_branch_lengths_statePosteriors.txt  acol_lotus_statePosteriors.txt  acol_molecules_simulated.txt  acol_simulated.txt  acol_simulated_Y.txt  acol_simulated_Z_molecules.txt  acol_simulated_Z_species.txt  acol_simulated_Z_species_trace.txt  acol_simulated_joint_density.txt  acol_simulated_lotus.tsv  acol_simulated_species_branch_length_grid.txt  acol_species_simulated.txt  check_Y_results.ipynb  check_convergence.ipynb  check_trace.ipynb  debug.ipynb  generate_data.py  infer.parameters  infer.sh  model_validation.ipynb  molecules.txt  pyproject.toml  run.sh  simulate.parameters  simulate.sh  species.txt
model_validation/single_root/branch_given_but_not_fixed/: acol.parameters  acol_Y_posterior.txt  acol_config.txt  acol_meanVar.txt  acol_molecules_posteriorMode.txt  acol_molecules_statePosteriors.txt  acol_species_posteriorMode.txt  acol_species_statePosteriors.txt  (+1 more)
model_validation/src/: cli.py  params.py  tree.py
(+206 files in other folders)
